printview for chrome

--- a/app/templates/Result/personsOverview.latte
+++ b/app/templates/Result/personsOverview.latte
@@ -138,11 +138,11 @@
                             <tfoot>
                                 <tr>
                                     <td colspan="4">TOTAL</td>
-                                    <td class="center bold">{if isset($category_sum_distribution['Mahá'])}{$category_sum_distribution['Mahá']|number:0:'.':' '}{else}"0"{/if}</td>
-                                    <td class="center bold">{if isset($category_sum_distribution['Big'])}{$category_sum_distribution['Big']|number:0:'.':' '}{else}"0"{/if}</td>
-                                    <td class="center bold">{if isset($category_sum_distribution['Medium'])}{$category_sum_distribution['Medium']|number:0:'.':' '}{else}"0"{/if}</td>
-                                    <td class="center bold">{if isset($category_sum_distribution['Small'])}{$category_sum_distribution['Small']|number:0:'.':' '}{else}"0"{/if}</td>
-                                    <td class="center bold">{if isset($category_sum_distribution['Mag'])}{$category_sum_distribution['Mag']|number:0:'.':' '}{else}"0"{/if}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Mahá'])}{$category_sum_distribution['Mahá']|number:0:'.':' '}{else}0{/if}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Big'])}{$category_sum_distribution['Big']|number:0:'.':' '}{else}0{/if}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Medium'])}{$category_sum_distribution['Medium']|number:0:'.':' '}{else}0{/if}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Small'])}{$category_sum_distribution['Small']|number:0:'.':' '}{else}0{/if}</td>
+                                    <td class="center bold">{if isset($category_sum_distribution['Mag'])}{$category_sum_distribution['Mag']|number:0:'.':' '}{else}0{/if}</td>
                                     <td class="center bold">{$allsum_points|number:2:'.':' '}</td>
                                 </tr>
                                 <tr>
