--- a/app/templates/Person/list.latte
+++ b/app/templates/Person/list.latte
@@ -24,8 +24,9 @@
                         </thead>
                         <tbody>
                             <tr n:foreach="$records as $record">
+	                            {dump $record->center->title}
                                 <td data-sort-value="{$record->name|webalize}">{$record->name}</td>
-                                <td data-sort-value="{isset($record->center->title) ? $record->center->title|webalize}">{isset($record->center->title) ? $record->center->title}</td>
+                                <td data-sort-value="{$record->center->title|webalize}">{$record->center->title}</td>
                                 <td data-sort-value="{$record->active}">
                                     <div class="switch active">
                                         <div class="onoffswitch">
