změna hesla správce

--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -34,7 +34,7 @@
 	                            </span>
 	                        </a>
 	                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-	                            <li><a href="profile.html">Profil</a></li>
+	                            <li><a n:href="AccountManager:changePassword">Změnit heslo</a></li>
 	                            <li class="divider"></li>
 	                            <li><a n:href="Sign:out">Odhlásit</a></li>
 	                        </ul>
@@ -128,7 +128,7 @@
 			{include main}
 			<div class="footer">
             	<div class="pull-right">300 osob, rozdáno <strong>12000 knih</strong>.</div>
-				<div><strong>Copyright</strong> Prabhupád Bhavan &copy; 2016</div>
+				<div><strong>Copyright</strong> Muktakéša dás &copy; {php echo date('Y')}</div>
 			</div>
         </div>
     </div>
