--- a/app/templates/ResultSettings/showCenters.latte
+++ b/app/templates/ResultSettings/showCenters.latte
@@ -8,7 +8,7 @@
         <div class="col-lg-12">
             <div class="ibox ollapsed float-e-margins">
                 <div class="ibox-title">
-                    <h5>Viditelnost center ve výsledkcích</h5>
+                    <h5>Viditelnost center ve výsledcích</h5>
                     <div class="ibox-tools">
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
