ImportSkpnPresenter a další opravy

--- a/app/templates/Sign/changePassword.latte
+++ b/app/templates/Sign/changePassword.latte
@@ -47,6 +47,7 @@
                                     {if $form['new_password_verify']->error}{label new_password_verify, class => "error" }{$form['new_password_verify']->error}{/label}{/if}
                                 </div>
                                 {input send, class => "btn btn-primary block full-width m-b"}
+                                <a n:href="Sign:out"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Odhlásit</a>
                             {/form}
                         </div>
                     </div>
