validace bezpečnějšího hesla

--- a/app/templates/Sign/changePassword.latte
+++ b/app/templates/Sign/changePassword.latte
@@ -79,13 +79,22 @@
                 equalTo: "Hesla se neshodují.",
             });
 
+            jQuery.validator.addMethod("notEqualTo", function(value, element, param) {
+                return this.optional(element) || value != $(param).val();
+            }, "Zadej odlišné heslo od současného.");
+
+            jQuery.validator.addMethod("alphaNumeric", function (value, element) {
+                return this.optional(element) || /^(?=\D*\d)(?=[^a-z]*[a-z])[0-9a-z]+$/i.test(value);
+            }, "Heslo musí obsahovat alespoň jedno číslo a jedno písmeno.");
+
             $("#frm-changePasswordForm").validate({
                 rules: {
                     new_password: {
-                        minlength: 6
+                        minlength: 6,
+                        notEqualTo: "#frm-changePasswordForm-actual_password",
+                        alphaNumeric: true
                     },
                     new_password_verify : {
-                        minlength : 6,
                         equalTo : "#frm-changePasswordForm-new_password"
                     }
                 }
