--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -127,7 +127,7 @@
             </div>
 			{include main}
 			<div class="footer">
-            	<div class="pull-right">300 osob, rozdáno <strong>12000 knih</strong>.</div>
+            	<div class="pull-right">{$persons_count} osob, rozdáno <strong>{$distribution_count|number:0,'.',' '} knih</strong>.</div>
 				<div><strong>Copyright</strong> Muktakéša dás &copy; {php echo date('Y')}</div>
 			</div>
         </div>
