--- a/www/less/style.less
+++ b/www/less/style.less
@@ -1,5 +1,6 @@
 @import "inspinia.css";
 @import "layout.less";
 @import "forms.less";
+@import "list.less";
 @import "result.less";
 @import "score-table-printview.less";
