--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -37,16 +37,7 @@
                         *}
                     </div>
                     <div class="ibox-content relative" style="min-height: 200px;" n:snippet="resultsTable">
-                        <div id="fountainG" class="ajax-loading">
-                            <div id="fountainG_1" class="fountainG"></div>
-                            <div id="fountainG_2" class="fountainG"></div>
-                            <div id="fountainG_3" class="fountainG"></div>
-                            <div id="fountainG_4" class="fountainG"></div>
-                            <div id="fountainG_5" class="fountainG"></div>
-                            <div id="fountainG_6" class="fountainG"></div>
-                            <div id="fountainG_7" class="fountainG"></div>
-                            <div id="fountainG_8" class="fountainG"></div>
-                        </div>
+                        {include ajax-loading}
                         <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="resultsTable" data-page-size="9999999999999" >
                             <thead>
                                 <tr>
